[tool.poetry]
name = "web3quorum"
version = "1.1.0"
description = "A library to interact with Quorum API"
authors = ["Chainstack <dev@chainstack.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
web3 = "^5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
