[tool.poetry]
name = "web3quorum"
version = "1.2.1"
description = "A library to interact with Quorum API"
authors = ["Chainstack <dev@chainstack.com>"]
license = "MIT"
[tool.poetry.dependencies]
python = "^3.7.2"
web3 = "^6.0.0b9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.masonry.api"
